<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e600ff33"
    tools:context="com.tologo.project05.JuegoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtViewLblJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblJuegoJugadorBienvenida"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtViewNickJugador"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewLblJugador"
        android:layout_alignBottom="@+id/txtViewLblJugador"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/txtViewLblJugador"
        android:text="@string/txtInvitado"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtViewLblPuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewLblJugador"
        android:layout_below="@+id/txtViewLblJugador"
        android:text="@string/lblPuntos"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtViewPuntosJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewLblPuntos"
        android:layout_alignBottom="@+id/txtViewLblPuntos"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/txtViewLblPuntos"
        android:text="@string/txtViewPuntosDefault"
        android:textSize="18sp" />

</RelativeLayout>
